[gd_scene load_steps=17 format=3 uid="uid://c5snibou75elx"]

[ext_resource type="PackedScene" uid="uid://ci8y8mvd357x0" path="res://ui/ui.tscn" id="1_54nty"]
[ext_resource type="Script" path="res://ui/camera_movement.gd" id="1_cwfen"]
[ext_resource type="Script" path="res://characters/shared/creature_manager.gd" id="2_ia8xe"]
[ext_resource type="Script" path="res://levels/path_end.gd" id="2_nuslo"]
[ext_resource type="PackedScene" uid="uid://dny2ht4ce7o62" path="res://characters/zombie/zombie.tscn" id="2_sr2dt"]
[ext_resource type="Script" path="res://towers/tower_manager.gd" id="5_f33ar"]
[ext_resource type="PackedScene" uid="uid://rdx63pyru5md" path="res://towers/basic_tower/basic_tower.tscn" id="6_6huf0"]
[ext_resource type="PackedScene" uid="uid://bgbqstcbpnbkq" path="res://characters/grove/guard/guard.tscn" id="8_6t6br"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_7u33g"]

[sub_resource type="Sky" id="Sky_pkq0b"]
sky_material = SubResource("ProceduralSkyMaterial_7u33g")

[sub_resource type="Environment" id="Environment_fl6l4"]
background_mode = 2
sky = SubResource("Sky_pkq0b")

[sub_resource type="NavigationMesh" id="NavigationMesh_pe6om"]
vertices = PackedVector3Array(-19.5, 0.5, -19.5, -19.5, 0.5, 19.5, 19.5, 0.5, 19.5, 19.5, 0.5, -19.5)
polygons = [PackedInt32Array(3, 2, 0), PackedInt32Array(0, 2, 1)]

[sub_resource type="BoxShape3D" id="BoxShape3D_uoduu"]
size = Vector3(1, 1, 4.6)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5nyxh"]
albedo_color = Color(0.346459, 0.604775, 0.356221, 1)

[sub_resource type="QuadMesh" id="QuadMesh_pwk3l"]
material = SubResource("StandardMaterial3D_5nyxh")
size = Vector2(40, 40)
orientation = 1

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_2oh6s"]
points = PackedVector3Array(-20, 0, -20, -20, 0, 20, 20, 0, -20, 20, 0, 20)

[node name="Level1" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_fl6l4")

[node name="UI" parent="." instance=ExtResource("1_54nty")]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707106, 0.707106, 0, -0.707106, 0.707106, 0, 15, 8.2)
current = true
size = 28.619
script = ExtResource("1_cwfen")

[node name="Path" type="NavigationRegion3D" parent="."]
navigation_mesh = SubResource("NavigationMesh_pe6om")

[node name="PathTargets" type="Node" parent="Path"]

[node name="PathTarget1" type="Marker3D" parent="Path/PathTargets"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 19, 0.8, -3)

[node name="PathTarget2" type="Marker3D" parent="Path/PathTargets"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 19, 0.8, -2)

[node name="PathTarget3" type="Marker3D" parent="Path/PathTargets"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 19, 0.8, -4)

[node name="PathTarget4" type="Marker3D" parent="Path/PathTargets"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 19, 0.8, -1)

[node name="Spawn" type="Marker3D" parent="Path"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12.6, 2.4, 2.5)

[node name="PathEnd" type="Area3D" parent="Path"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.8, 0.5, -2.4)
collision_mask = 3
script = ExtResource("2_nuslo")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Path/PathEnd"]
shape = SubResource("BoxShape3D_uoduu")

[node name="Ground" type="MeshInstance3D" parent="Path"]
mesh = SubResource("QuadMesh_pwk3l")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="Path/Ground"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Path/Ground/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_2oh6s")

[node name="CreatureManager" type="Node" parent="." node_paths=PackedStringArray("spawn")]
script = ExtResource("2_ia8xe")
Zombie = ExtResource("2_sr2dt")
spawn = NodePath("../Path/Spawn")

[node name="SpawnTimer" type="Timer" parent="CreatureManager"]

[node name="TowerManager" type="Node3D" parent="."]
script = ExtResource("5_f33ar")
BasicTower = ExtResource("6_6huf0")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 7.1, 0)

[node name="Grove" type="Node" parent="."]

[node name="Guard" parent="Grove" instance=ExtResource("8_6t6br")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.2, 1, 0)

[node name="Guard2" parent="Grove" instance=ExtResource("8_6t6br")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.7, 1, -2.1)

[node name="Guard3" parent="Grove" instance=ExtResource("8_6t6br")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.3, 1, -2.6)

[node name="Guard4" parent="Grove" instance=ExtResource("8_6t6br")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.6, 1, -5.6)

[connection signal="body_shape_entered" from="Path/PathEnd" to="Path/PathEnd" method="_on_body_shape_entered"]
[connection signal="timeout" from="CreatureManager/SpawnTimer" to="CreatureManager" method="_on_spawn_timer_timeout"]
